Added contact info

--- a/PaulNguyenSite/Views/Home/Contact.cshtml
+++ b/PaulNguyenSite/Views/Home/Contact.cshtml
@@ -5,13 +5,14 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    San Jose, CA 95121<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    (408) 621-8753
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Current Email:</strong> <a href="mailto:paul.t.nguyen@sjsu.edu">paul.t.nguyen@sjsu.edu</a><br />
+    <strong>Alternative Email:</strong> <a href="mailto:majide9001@gmail.com">majide9001@gmail.com</a><br />
+    <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/paul1409/">Paul Nguyen</a><br />
+    <strong>GitHub:</strong> <a href="https://github.com/paul1409">paul1409</a>
 </address>
