Changed page descriptions

--- a/PaulNguyenSite/Views/Shared/_Layout.cshtml
+++ b/PaulNguyenSite/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - PaulNguyenSite</p>
+            <p>&copy; 2017 - Paul Nguyen</p>
         </footer>
     </div>
 
